@@ -6,10 +6,10 @@ import os
 import signal
 import sys
 import time
-import threading
 
 from test.fork_wait import ForkWait
-from test.test_support import run_unittest, reap_children, get_attribute
+from test.test_support import run_unittest, reap_children, get_attribute, import_module
+threading = import_module('threading')
 
 #Skip test if fork does not exist.
 get_attribute(os, 'fork')
